<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/searchMenuBtn"
        android:title="Search"
        android:icon="@drawable/outlined_action_search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/ic_notification"
        android:icon="@drawable/icon_base_badge"
        android:title="notifications"
        app:showAsAction="always" />
</menu>