...
        android:clipChildren="false"
        android:fitsSystemWindows="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.natura.android.appbartop.StandardAppBarTop
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="?toolbarDefaultTheme"
            app:actionLeft="true"
            app:actionRight="true"
            app:appBarColor="colorDefault"
...
